@@ -9,6 +9,7 @@
 ==== New classes ====
 
 ==== API changes ====
+ * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
 
 === Python module ===
 
